[gd_scene load_steps=11 format=3 uid="uid://dvuwcyu3chwr1"]

[ext_resource type="PackedScene" uid="uid://bu2j4yalwn3ks" path="res://visuals/PlasmaPlume.tscn" id="1_bs7i2"]
[ext_resource type="PackedScene" uid="uid://drs7rf6n0y5ok" path="res://visuals/Thruster.tscn" id="2_nl3g8"]
[ext_resource type="PackedScene" uid="uid://bfwsgcbvelo0t" path="res://ship/frigate/real/FrigateModel.tscn" id="3_5u4ba"]
[ext_resource type="Script" path="res://visuals/blinking_light.gd" id="3_wxm7r"]
[ext_resource type="Material" uid="uid://d3306785am850" path="res://ship/frigate/real/BasePaint.tres" id="4_rm61y"]
[ext_resource type="Script" path="res://ship/frigate/real/launcher.gd" id="6_yjjj6"]
[ext_resource type="PackedScene" uid="uid://duncb2lf44vea" path="res://ship/frigate/real/missile.tscn" id="7_fvwei"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jhx50"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ulwg0"]
material = SubResource("StandardMaterial3D_jhx50")
top_radius = 0.3
bottom_radius = 0.2
height = 0.4
radial_segments = 16
rings = 2

[sub_resource type="CylinderMesh" id="CylinderMesh_xrp77"]
material = ExtResource("4_rm61y")
top_radius = 0.3
bottom_radius = 0.2
height = 0.4
radial_segments = 16
rings = 2

[node name="player_ship" type="Node3D"]

[node name="scaledown" type="Node3D" parent="."]
transform = Transform3D(0.001, 0, 0, 0, 0.001, 0, 0, 0, 0.001, 0, 0, 0)

[node name="Plumes" type="Node3D" parent="scaledown"]
transform = Transform3D(138.79, 0, 0, 0, 138.79, 0, 0, 0, 138.79, -31.1913, 0, 0)

[node name="Plume" parent="scaledown/Plumes" instance=ExtResource("1_bs7i2")]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0.00628205, 0, 0)

[node name="Thrusters" type="Node3D" parent="scaledown"]

[node name="Thruster1" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 150, 0, 0, 0, 150, 23.016, 5.86845, 0)
down = true

[node name="Thruster2" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 150, 0, 0, 0, 150, 21.3994, 5.86845, 0)
down = true

[node name="Thruster3" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 9.18485e-15, -150, 0, 150, 9.18485e-15, 23.016, 6.08327, 0.711069)
left = true
roll_left = true

[node name="Thruster4" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 9.18485e-15, -150, 0, 150, 9.18485e-15, 21.3994, 6.08327, 0.711069)
left = true
roll_left = true

[node name="Thruster5" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -2.75546e-14, 150, 0, -150, -2.75546e-14, 23.016, 6.08327, -0.711)
right = true
roll_right = true

[node name="Thruster6" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -2.75546e-14, 150, 0, -150, -2.75546e-14, 21.3994, 6.08327, -0.711)
right = true
roll_right = true

[node name="Thruster7" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(9.18485e-15, 150, 0, -150, 9.18485e-15, 0, 0, 0, 150, 24.3485, 6.08418, 0)

[node name="Thruster8" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -150, -1.83697e-14, 0, 1.83697e-14, -150, 23.0036, -5.87698, 3.94772e-05)
up = true

[node name="Thruster9" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -150, -1.83697e-14, 0, 1.83697e-14, -150, 21.4029, -5.87698, 3.94772e-05)
up = true

[node name="Thruster10" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -2.75546e-14, 150, 0, -150, -2.75546e-14, 23.016, -6.07937, -0.71103)
right = true
roll_left = true

[node name="Thruster11" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -2.75546e-14, 150, 0, -150, -2.75546e-14, 21.3994, -6.07937, -0.71103)
right = true
roll_left = true

[node name="Thruster12" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 4.59243e-14, -150, 0, 150, 4.59243e-14, 23.016, -6.07937, 0.711039)
left = true
roll_right = true

[node name="Thruster13" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 4.59243e-14, -150, 0, 150, 4.59243e-14, 21.3994, -6.07937, 0.711039)
left = true
roll_right = true

[node name="Thruster14" parent="scaledown/Thrusters" instance=ExtResource("2_nl3g8")]
transform = Transform3D(9.18485e-15, 150, 0, 150, -9.18485e-15, -1.83697e-14, -1.83697e-14, 1.12482e-30, -150, 24.3485, -6.07937, 3.94772e-05)

[node name="Pod1" type="Node3D" parent="scaledown/Thrusters"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.57991, 0, 0)

[node name="Thruster1" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 150, 0, 0, 0, 150, -16.37, 9.20155, 0)
up = true

[node name="Thruster2" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 9.18485e-15, -150, 0, 150, 9.18485e-15, -16.368, 9.04997, 0.144937)
roll_left = true

[node name="Thruster3" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -2.75546e-14, 150, 0, -150, -2.75546e-14, -16.368, 9.05, -0.145)
roll_right = true

[node name="Thruster4" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 150, 0, 0, 0, 150, -19.5736, 9.20155, 0)
up = true

[node name="Thruster5" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 9.18485e-15, -150, 0, 150, 9.18485e-15, -19.5716, 9.04997, 0.144937)
roll_left = true

[node name="Thruster6" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -2.75546e-14, 150, 0, -150, -2.75546e-14, -19.5716, 9.05, -0.145)
roll_right = true

[node name="Thruster7" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(9.18485e-15, 150, 0, -150, 9.18485e-15, 0, 0, 0, 150, -14.9866, 9.05106, 0)

[node name="Thruster8" parent="scaledown/Thrusters/Pod1" instance=ExtResource("2_nl3g8")]
transform = Transform3D(-2.75546e-14, -150, 0, 150, -2.75546e-14, 0, 0, 0, 150, -20.9412, 9.05106, 0)

[node name="Pod2NR" type="Node3D" parent="scaledown/Thrusters"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.57991, 0, 0)

[node name="Thruster1" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, -106.066, 0, 106.066, -106.066, -16.37, -6.50648, 6.50648)
down = true

[node name="Thruster2" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, 106.066, 0, -106.066, -106.066, -16.368, -6.50178, 6.29681)
roll_left = true

[node name="Thruster3" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 106.066, -106.066, 0, 106.066, 106.066, -16.368, -6.29679, 6.50185)
roll_right = true

[node name="Thruster4" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, -106.066, 0, 106.066, -106.066, -19.5736, -6.50648, 6.50648)
down = true

[node name="Thruster5" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, 106.066, 0, -106.066, -106.066, -19.5716, -6.50178, 6.29681)
roll_left = true

[node name="Thruster6" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 106.066, -106.066, 0, 106.066, 106.066, -19.5716, -6.29679, 6.50185)
roll_right = true

[node name="Thruster7" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(9.18485e-15, 150, 0, 106.066, -6.49467e-15, -106.066, -106.066, 6.49467e-15, -106.066, -14.9866, -6.40007, 6.40007)

[node name="Thruster8" parent="scaledown/Thrusters/Pod2NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(-2.75546e-14, -150, 0, -106.066, 1.9484e-14, -106.066, 106.066, -1.9484e-14, -106.066, -20.9412, -6.40007, 6.40007)

[node name="Pod3NR" type="Node3D" parent="scaledown/Thrusters"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.57991, 0, 0)

[node name="Thruster1" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, 106.066, 0, -106.066, -106.066, -16.37, -6.50648, -6.50648)
down = true

[node name="Thruster2" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 106.066, 106.066, 0, -106.066, 106.066, -16.368, -6.29681, -6.50178)
roll_left = true

[node name="Thruster3" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, -106.066, 0, 106.066, -106.066, -16.368, -6.50185, -6.29679)
roll_right = true

[node name="Thruster4" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, 106.066, 0, -106.066, -106.066, -19.5736, -6.50648, -6.50648)
down = true

[node name="Thruster5" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, 106.066, 106.066, 0, -106.066, 106.066, -19.5716, -6.29681, -6.50178)
roll_left = true

[node name="Thruster6" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(150, 0, 0, 0, -106.066, -106.066, 0, 106.066, -106.066, -19.5716, -6.50185, -6.29679)
roll_right = true

[node name="Thruster7" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(9.18485e-15, 150, 0, 106.066, -6.49467e-15, 106.066, 106.066, -6.49467e-15, -106.066, -14.9866, -6.40007, -6.40007)

[node name="Thruster8" parent="scaledown/Thrusters/Pod3NR" instance=ExtResource("2_nl3g8")]
transform = Transform3D(-2.75546e-14, -150, 0, -106.066, 1.9484e-14, 106.066, -106.066, 1.9484e-14, -106.066, -20.9412, -6.40007, -6.40007)

[node name="Lights" type="Node3D" parent="scaledown"]

[node name="Beacon" type="Node3D" parent="scaledown/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.92943, -7.23529, 0)
script = ExtResource("3_wxm7r")

[node name="Light" type="OmniLight3D" parent="scaledown/Lights/Beacon"]
layers = 2
light_color = Color(1, 0.03, 0.03, 1)
light_energy = 0.05
omni_range = 0.005

[node name="Emit" type="MeshInstance3D" parent="scaledown/Lights/Beacon"]
mesh = SubResource("CylinderMesh_ulwg0")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="scaledown/Lights/Beacon"]
mesh = SubResource("CylinderMesh_xrp77")

[node name="frigate" parent="scaledown" instance=ExtResource("3_5u4ba")]

[node name="LaunchBay" type="Node3D" parent="scaledown"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.3303, 3.4993, 0)
script = ExtResource("6_yjjj6")

[node name="Missile1" parent="scaledown/LaunchBay" instance=ExtResource("7_fvwei")]
visible = false

[node name="Missile2" parent="scaledown/LaunchBay" instance=ExtResource("7_fvwei")]
visible = false

[node name="Missile3" parent="scaledown/LaunchBay" instance=ExtResource("7_fvwei")]
visible = false

[node name="Missile4" parent="scaledown/LaunchBay" instance=ExtResource("7_fvwei")]
visible = false
